statum-macros/tests/ui/invalid_machine_private_field_access.stderr
error[E0616]: field `secret` of struct `LightSwitch` is private
  --> tests/ui/invalid_machine_private_field_access.rs:37:19
   |
37 |     let _ = light.secret;
   |                   ^^^^^^ private field
